# CS1410-Inheritance

./: CMakeLists.txt  Counter.cpp  Counter.h  Diamond.cpp  Distance.cpp  Distance.h  Employee.cpp  Employee.h  Laborer.cpp  Laborer.h  Manager.cpp  Manager.h  README.md  Scientist.cpp  Scientist.h  Student.cpp  Student.h  TestEmployee.cpp  TestMultiInheritance.cpp  main.cpp  testDistance.cpp
